--- a/examples/e2e_cli/docker-compose-cli.yaml
+++ b/examples/e2e_cli/docker-compose-cli.yaml
@@ -153,7 +153,7 @@ services:
     command: /bin/bash -c './scripts/script.sh ${CHANNEL_NAME}; sleep $TIMEOUT'
     volumes:
         - /var/run/:/host/var/run/
-        - ../chaincode/java/:/opt/gopath/src/github.com/hyperledger/fabric/examples/chaincode/java
+        - ../chaincode/go/:/opt/gopath/src/github.com/hyperledger/fabric/examples/chaincode/go
         - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
         - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
